[package]
name = "memory_note"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "time", "chrono"]}
dotenv = "0.15"
time = { version = "0.3", features = ["serde"] }
jsonwebtoken = "9"
futures-util = "0.3.31"
actix-web-actors = "4.3.1"
